# rust-producer-kafka

./: .gitignore  Cargo.toml  Readme.md
.devops/docker/develop/: Dockerfile  docker-compose.yml  promtail_config.yml
config/: log4rs.yaml
src/: main.rs
