[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rdkafka = { version = "0.29", features = ["cmake-build"] }
kafka = "0.9.0"
log = "0.4.0"
env_logger = "0.9.0"
#Para que funcione grafana loki
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-loki = "0.2.2"
url = "2.3.1"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"

