[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rdkafka = { version = "0.29", features = ["cmake-build"] }
kafka = "0.9.0"
#postgres
chrono = "0.4"
postgres = {version= "0.19.2", features = ["with-chrono-0_4"]}
native-tls= "0.2.10"
postgres-native-tls= "0.5.0"
#logs
log = "0.4.0"
log4rs = "1.2.0"
serde_yaml = "0.9.21"